@@ -5,3 +5,4 @@ LIB_DIR = "@libdir@"
 libexecdir = "@libexecdir@"
 PACKAGE="@PACKAGE@"
 VERSION="@VERSION@"
+PYTHONDIR="@PYTHONDIR@"
